# mlflow_course

./: .gitignore  pyproject.toml
mlflow_course/02-experiment-tracing/: .env.example  Readme.md  classic_ml.py  gpt.py  register_model.py
mlflow_course/04-deployment/: batch.py  starter.ipynb
