[project]
name = "mlflow-course"
version = "0.1.0"
description = ""
authors = [
    {name = "stepanepam",email = "stepan_paraska@epam.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "mlflow (>=2.19.0,<3.0.0)",
    "openai (>=1.59.9,<2.0.0)",
    "boto3 (>=1.36.2,<2.0.0)",
    "awscli (>=1.37.2,<2.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

